--- a/Pixelpro/Holamundo/view/frontend/templates/productos.phtml
+++ b/Pixelpro/Holamundo/view/frontend/templates/productos.phtml
@@ -1,6 +1,6 @@
 <?php $productCollection = $block->getProductCollection();
 foreach ($productCollection as $product) {
     print_r($product->getData());     
-    echo "<br>";
+    echo "<h1>Custom Text</h1> <br>";
 }
 ?>
